[package]
name = "nocturne"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
pin-cell = "0.2.0"
nocturne-derive = { version = "0.1.0", path = "crates/derive" }
nocturne-gc = { version = "0.1.0", path = "crates/gc" }

[dev-dependencies]
env_logger = "0.9.0"

[workspace]
